<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RHVOICE ARABIC</string>
    <string name="set_as_default">Go to Text-to-Speech settings</string>
    <string name="enter_text_hint">Type text here...</string>
    <string name="listen">Listen</string>
    <string name="stop">Stop</string>

    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_dictionary">Dictionary</string>
    <string name="action_about">About</string>
    <string name="about_app">About</string>

    <string name="prosody_settings">Speech Settings</string>
    <string name="speed_label">Speed</string>
    <string name="pitch_label">Pitch</string>
    <string name="volume_label">Volume</string>
    <string name="read_emojis_title">Read Emojis</string>
    <string name="read_emojis_summary">Read emojis, symbols, and currencies in Arabic</string>
    <string name="pause_sukoon_title">Pause Sukoonization</string>
    <string name="pause_sukoon_summary">Sukoonize the last letter in a sentence and strip Ta Marbuta while preserving preceding vowel</string>

    <string name="dictionary">Dictionary</string>
    <string name="dict_search_hint">Search…</string>
    <string name="dict_add">Add</string>
    <string name="dict_edit">Edit</string>
    <string name="dict_delete">Delete</string>
    <string name="dict_cancel">Cancel</string>
    <string name="dict_save">Save</string>
    <string name="dict_original">Original phrase</string>
    <string name="dict_replacement">Replacement</string>
    <string name="dict_empty">No dictionary entries yet</string>
    <string name="dict_export">Export Dictionary</string>
    <string name="dict_import">Import Dictionary</string>
    <string name="dict_delete_all">Delete All</string>
    <string name="dict_delete_all_confirm">Are you sure you want to delete all dictionary entries?</string>
    <string name="dict_import_success">Dictionary imported successfully</string>
    <string name="dict_import_fail">Unknown data. Failed to import dictionary</string>
    <string name="dict_export_empty">Dictionary is empty, nothing to export</string>
    <string name="dict_cleared">All entries deleted</string>

    <string name="developed_by">A project to support Arabic voices from RHVoice, developed by PBT.</string>
    <string name="footer_developed_by">Developed by PBT</string>
    <string name="btn_youtube">Follow us on YouTube</string>
    <string name="btn_youtube_desc">Follow us on YouTube</string>
    <string name="btn_telegram">Follow us on Telegram</string>
    <string name="btn_telegram_desc">Follow us on Telegram</string>
    <string name="btn_email">Contact us</string>
    <string name="btn_email_desc">Contact us</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="languages">Arabic Voices</string>
    <string name="user_dicts">User Dictionaries</string>
    <string name="default_voice_title">Default Voice</string>
    <string name="default_voice_dialog_title">Select a Voice</string>
    <string name="detect_language_title">Detect Language</string>
    <string name="detect_language_desc">Automatic language switching</string>
    <string name="pseudo_english_title">English Words</string>
    <string name="pseudo_english_desc">Attempt to read English words properly</string>
    <string name="voice_remove_question">Are you sure you want to uninstall?</string>
</resources>
